force-app/main/default/objects/Benefits_Verification__c/Benefits_Verification__c.object-meta.xml
<CustomObject>
    <label>Benefits Verification</label>
    <pluralLabel>Benefits Verifications</pluralLabel>
    <nameField>
        <displayFormat>BV-{00000}</displayFormat>
        <label>Benefits Verification Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>