force-app/main/default/objects/Benefits_Verification__c/fields/BV_Date__c.field-meta.xml
<CustomField>
    <fullName>BV_Date__c</fullName><label>BV Date</label><type>DateTime</type>
</CustomField>