force-app/main/default/objects/Benefits_Verification__c/fields/BV_Method__c.field-meta.xml
<CustomField>
    <fullName>BV_Method__c</fullName><label>BV Method</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Electronic</fullName><default>true</default><label>Electronic</label></value>
        <value><fullName>Manual</fullName><default>false</default><label>Manual</label></value>
        <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
    </valueSetDefinition></valueSet>
</CustomField>