force-app/main/default/objects/Benefits_Verification__c/fields/BV_Status__c.field-meta.xml
<CustomField>
    <fullName>BV_Status__c</fullName><label>BV Status</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
        <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
        <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        <value><fullName>Requires Manual Review</fullName><default>false</default><label>Requires Manual Review</label></value>
    </valueSetDefinition></valueSet>
</CustomField>