force-app/main/default/objects/Benefits_Verification__c/fields/Copay_Amount__c.field-meta.xml
<CustomField>
    <fullName>Copay_Amount__c</fullName><label>Copay Amount</label><type>Currency</type><precision>10</precision><scale>2</scale>
</CustomField>