force-app/main/default/objects/Benefits_Verification__c/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName><label>Deductible</label><type>Currency</type>
    <precision>12</precision><scale>2</scale><required>false</required>
</CustomField>