force-app/main/default/objects/Benefits_Verification__c/fields/Deductible_Met__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Met__c</fullName><label>Deductible Met</label><type>Currency</type>
    <precision>12</precision><scale>2</scale><required>false</required>
</CustomField>