force-app/main/default/objects/Benefits_Verification__c/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName><label>Drug</label><type>Lookup</type>
    <referenceTo>Drug__c</referenceTo>
    <relationshipName>BV_Drug</relationshipName>
    <relationshipLabel>BV Drug</relationshipLabel>
</CustomField>