force-app/main/default/objects/Benefits_Verification__c/fields/Enrollee__c.field-meta.xml
<CustomField>
    <fullName>Enrollee__c</fullName><label>Enrollee</label><type>Lookup</type>
    <referenceTo>CareProgramEnrollee</referenceTo>
    <relationshipLabel>Benefits Verifications</relationshipLabel>
    <relationshipName>Benefits_Verifications</relationshipName><required>true</required>
</CustomField>