force-app/main/default/objects/Benefits_Verification__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName><label>Group Number</label><type>Text</type>
    <length>100</length><required>false</required>
<externalId>false</externalId>
</CustomField>