force-app/main/default/objects/Benefits_Verification__c/fields/Next_Reverification_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Reverification_Date__c</fullName><label>Next Reverification Date</label><type>Date</type>
</CustomField>