force-app/main/default/objects/Benefits_Verification__c/fields/OOP_Max__c.field-meta.xml
<CustomField>
    <fullName>OOP_Max__c</fullName><label>OOP Maximum</label><type>Currency</type><precision>12</precision><scale>2</scale>
</CustomField>