force-app/main/default/objects/Benefits_Verification__c/fields/OOP_Met__c.field-meta.xml
<CustomField>
    <fullName>OOP_Met__c</fullName><label>OOP Met</label><type>Currency</type>
    <precision>12</precision><scale>2</scale><required>false</required>
</CustomField>