force-app/main/default/objects/Benefits_Verification__c/fields/PA_Required__c.field-meta.xml
<CustomField>
    <fullName>PA_Required__c</fullName><label>PA Required</label><type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>