force-app/main/default/objects/Benefits_Verification__c/fields/Payer_Name__c.field-meta.xml
<CustomField>
    <fullName>Payer_Name__c</fullName><label>Payer Name</label><type>Text</type>
    <length>255</length><required>false</required>
<externalId>false</externalId>
</CustomField>