force-app/main/default/objects/Benefits_Verification__c/fields/Payer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Payer_Phone__c</fullName><label>Payer Phone</label><type>Phone</type>
</CustomField>