force-app/main/default/objects/Benefits_Verification__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName><label>Policy Number</label><type>Text</type><length>100</length>
</CustomField>